# s_fractal_cpp

./: CMakeLists.txt  CMakelists.txt  LICENSE  README.md  s_fractal.cpp  s_fractal.h  s_fractal_main.cpp  s_fractal_scenario.cpp  s_fractal_scenario.h  s_image_data.cpp  s_image_data.h  s_xml_doc.cpp  s_xml_doc.h  s_xml_element.cpp  s_xml_element.h  sofia.h
data/: fractal.xml  gen.xml
